--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application
-        android:label="reservasi_perpus"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.programmingnight.my_grocery.my_grocery">
+   <application
+        android:label="my_grocery"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
